# hypersurfaces

./: .gitignore  Bernstein.ml  Display.ml  Field.ml  HyperSurfaces.ml  Makefile  README.md  Simplices.ml  TestBernstein.ml  TestCurves.ml  TestSurfaces.ml  Vector.ml  dune  hypersurfaces.opam
article/: approximation.tex  attic.tex  codim.tex  conventions.tex  further.tex  header.tex  implem.tex  intro.tex  lipshitz.tex  main.bib  main.tex  partition.tex  proof.tex  zih.tex
src/: Args.ml  Bernstein.ml  Db.ml  Debug.ml  Display.ml  Expr.ml  Field.ml  FieldGen.ml  FieldMake.ml  Gaussian.ml  Gaussian.mli  Hyper.ml  HyperSurfaces.ml  Lib.ml  Main.ml  Parser.ml  Polynomial.ml  Previous.ml  Previous.mli  Printing.ml  Rank.ml  Simplices.ml  Topology.ml  UnionFind.ml  Vector.ml  VectorCommon.ml  chrono.ml  chrono.mli  debug.ml  dune  lines_fragment.glsl  lines_vertex.glsl  triangles_fragment.glsl  triangles_vertex.glsl
test_gmp/: TestGmp.ml  dune
tests/: 3dcurves.txt  blowup.txt  cone-cubic.txt  cubic.txt  curves.txt  dim2-0.txt  dim3-0.txt  dim3-1.txt  harnack-sextic.txt  hyper.txt  loop.txt  quartic-M-2.txt  quartic-M.txt  roots.txt  sextic.txt  singular.txt  surfaces.txt
tests/hard/: canopener.txt  circles_6.txt  concentric.txt  cone-cubic.txt  dim3-sp.txt  dim4-sp.txt  dim5-sp.txt  gudkov-sextic.txt  harnack-heptic.txt  harnack-nonic.txt  harnack-octic.txt  hilbert-sextic.txt
tests/random/: random1.txt  random2-2.txt  random2.txt  random3-2.txt  random3-3.txt  random3.txt  random4-2.txt  random4-3.txt  random4-4.txt  random4.txt  random5.txt  random6.txt  random7.txt
