opam-version: "2.0"
synopsis: "Algebraic equation solver"

maintainer: "Christophe Raffalli <christophe@raffalli.eu>"
authors: [
  "Christophe Raffalli <christophe@raffalli.eu>" ]
license: "MIT"
homepage: "https:raffalli.eu/hypersurfaces"
bug-reports: "christophe@raffalli.eu"

depends: [
  "ocaml" { >= "4.04.0" }
  "dune"  { build & >= "1.2.0" }
  "pacomb" { build }
  "gles3" "zarith" "mlgmpidl" "sqlite3"
]

build: [ [ "dune" "build" "--release" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "--release" "-p" name "-j" jobs ] ]
