opam-version: "2.0"
synopsis: "Algebraic equation solver"

maintainer: "Christophe Raffalli <christophe@raffalli.eu>"
authors: [
  "Christophe Raffalli <christophe@raffalli.eu>" ]
license: "MIT"
homepage: "https:raffalli.eu/hypersurfaces"
bug-reports: "christophe@raffalli.eu"

depends: [
  "ocaml" { >= "4.04.0" }
  "dune"  { build & >= "1.2.0" }
  "pacomb" { build }
  "domain_shims" "mlmpfr"  "gles3" "zarith" "sqlite3" "imagelib"
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
